--- a/google-homepage-style.css
+++ b/google-homepage-style.css
@@ -76,7 +76,7 @@ a {
     height: 144px;
     width: 272px;
     padding-top: 109px;
-    display: inline;
+    display: inline-block;
     text-align: -webkit-center;
 }
 
@@ -111,5 +111,75 @@ a {
     margin-left: 30px;
     padding-left: 27px;
     text-align: left;
-    
 }
+
+.bottom {
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-color: rgb(242, 242, 242);
+    background-image: none;
+    background-origin: padding-box;
+    background-position-x: 0%;
+    background-position-y: 0%;
+    background-repeat-x: ;
+    background-repeat-y: ;
+    background-size: auto;
+    border-top-color: rgb(228, 228, 228);
+    border-top-style: solid;
+    border-top-width: 1px;
+    bottom: 0px;
+    color: rgb(34, 34, 34);
+    display: block;
+    font-family: arial, sans-serif;
+    font-size: 13.3333px;
+    height: 82px;
+    left: 0px;
+    line-height: 40px;
+    min-width: 980px;
+    position: absolute;
+    right: 0px;
+visibility: visible;
+}
+
+.lucky {
+    background-color: rgb(242, 242, 242);
+    border-color: rgb(242, 242, 242);
+    border-radius: 4px;
+    border-width: 1px;
+    margin: 11px 4px;
+    border-style: solid;
+    color: rgb(95, 99, 104);
+    display: inline-block;
+    font-family: arial, sans-serif;
+    font-weight: 400;
+    height: 36px;
+    line-height: 27px;
+    font-size: 14px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.google-search {
+    background-color: rgb(242, 242, 242);
+    border-color: rgb(242, 242, 242);
+    border-radius: 4px;
+    border-width: 1px;
+    margin: 11px 4px;
+    border-style: solid;
+    color: rgb(95, 99, 104);
+    display: inline-block;
+    font-family: arial, sans-serif;
+    font-weight: 400;
+    height: 36px;
+    line-height: 27px;
+    font-size: 14px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.button:hover {
+    border-color: rgb(198, 198, 198);
+    color: rgb(34, 34, 34);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 1px 0px;
+}
+
