--- a/google-homepage-style.css
+++ b/google-homepage-style.css
@@ -111,6 +111,9 @@ a {
     margin-left: 30px;
     padding-left: 27px;
     text-align: left;
+    border-bottom-color: rgb(228, 228, 228);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
 }
 
 .bottom {
@@ -121,8 +124,6 @@ a {
     background-origin: padding-box;
     background-position-x: 0%;
     background-position-y: 0%;
-    background-repeat-x: ;
-    background-repeat-y: ;
     background-size: auto;
     border-top-color: rgb(228, 228, 228);
     border-top-style: solid;
@@ -138,7 +139,6 @@ a {
     min-width: 980px;
     position: absolute;
     right: 0px;
-visibility: visible;
 }
 
 .lucky {
@@ -183,3 +183,29 @@ visibility: visible;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 1px 0px;
 }
 
+.adv {
+    display: inline-block;
+    color: rgb(95, 99, 104);
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    line-height: 40px;
+    white-space: nowrap;
+}
+
+.abh {
+    color: rgb(34, 34, 34);
+    display: block;
+    float: right;
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    height: 40px;
+    line-height: 40px;
+    margin-right: 30px;
+    visibility: visible;
+    white-space: nowrap;
+    width: 206px;
+}
+
+.lower-bottom {
+    display: inline-block;
+}
