--- a/google-homepage-style.css
+++ b/google-homepage-style.css
@@ -117,28 +117,9 @@ a {
 }
 
 .bottom {
-    background-attachment: scroll;
-    background-clip: border-box;
     background-color: rgb(242, 242, 242);
-    background-image: none;
-    background-origin: padding-box;
-    background-position-x: 0%;
-    background-position-y: 0%;
-    background-size: auto;
-    border-top-color: rgb(228, 228, 228);
-    border-top-style: solid;
-    border-top-width: 1px;
-    bottom: 0px;
-    color: rgb(34, 34, 34);
-    display: block;
-    font-family: arial, sans-serif;
-    font-size: 13.3333px;
-    height: 82px;
-    left: 0px;
-    line-height: 40px;
-    min-width: 980px;
-    position: absolute;
-    right: 0px;
+    width: 100%;
+    margin-top: 50px;
 }
 
 .lucky {
@@ -184,15 +165,85 @@ a {
 }
 
 .adv {
-    display: inline-block;
     color: rgb(95, 99, 104);
+    cursor: pointer;
+    display: inline-block;
     font-family: arial, sans-serif;
     font-size: 13px;
+    height: 40px;
     line-height: 40px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-left: 27px;
+    text-decoration-color: rgb(95, 99, 104);
+    text-decoration-line: none;
+    text-decoration-style: solid;
+    visibility: visible;
     white-space: nowrap;
 }
 
 .abh {
+    color: rgb(34, 34, 34);
+    display: block;
+    float: left;
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    height: 40px;
+    line-height: 40px;
+    margin-right: 30px;
+    visibility: visible;
+    white-space: nowrap;
+    width: 206px;
+}
+
+.lower-bottom {
+    display: inline-block;
+    width: 100%;
+}
+
+.pri {
+    color: rgb(95, 99, 104);
+    cursor: pointer;
+    display: inline-block;
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    height: 40px;
+    line-height: 40px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-left: 27px;
+    text-decoration-color: rgb(95, 99, 104);
+    text-decoration-line: none;
+    text-decoration-style: solid;
+    visibility: visible;
+    white-space: nowrap;
+}
+
+.set {
+    color: rgb(95, 99, 104);
+    cursor: pointer;
+    display: inline-block;
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    height: 40px;
+    line-height: 40px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-left: 27px;
+    text-decoration-color: rgb(95, 99, 104);
+    text-decoration-line: none;
+    text-decoration-style: solid;
+    visibility: visible;
+    white-space: nowrap;
+}
+
+.pts {
     color: rgb(34, 34, 34);
     display: block;
     float: right;
@@ -206,6 +257,62 @@ a {
     width: 206px;
 }
 
-.lower-bottom {
+.bus {
+    color: rgb(95, 99, 104);
+    cursor: pointer;
     display: inline-block;
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    height: 40px;
+    line-height: 40px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-left: 27px;
+    text-decoration-color: rgb(95, 99, 104);
+    text-decoration-line: none;
+    text-decoration-style: solid;
+    visibility: visible;
+    white-space: nowrap;
+}
+
+.how {
+    color: rgb(95, 99, 104);
+    cursor: pointer;
+    display: inline-block;
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    height: 40px;
+    line-height: 40px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-left: 27px;
+    text-decoration-color: rgb(95, 99, 104);
+    text-decoration-line: none;
+    text-decoration-style: solid;
+    visibility: visible;
+    white-space: nowrap;
+}
+
+.ter {
+    color: rgb(95, 99, 104);
+    cursor: pointer;
+    display: inline-block;
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    height: 40px;
+    line-height: 40px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-left: 27px;
+    text-decoration-color: rgb(95, 99, 104);
+    text-decoration-line: none;
+    text-decoration-style: solid;
+    visibility: visible;
+    white-space: nowrap;
 }
