--- a/google-homepage-style.css
+++ b/google-homepage-style.css
@@ -8,7 +8,7 @@
     height: 30px;
     width: 30px;
     background-position-x: -132px;
-    background-position-y: 38px;
+    background-position-y: 32px;
     background-size: 528px 68px;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
@@ -35,6 +35,16 @@
 
 .about {
     font-family: Arial, sans-serif;
+    font-size: 13px;
+    display: inline-block;
+    padding-left: 15px;
+}
+
+.store {
+    font-family: Arial, sans-serif;
+    font-size: 13px;
+    display: inline-block;
+    padding-left: 15px;
 }
 
 .content {
@@ -70,6 +80,7 @@ a {
 .upper-right {
     color: rgba(0, 0, 0, 0.87);
     float: right;
+    padding-right: 30px;
 }
 
 .google-logo {
@@ -108,12 +119,12 @@ a {
     color: rgba(0, 0, 0, 0.54);
     display: block;
     line-height: 40px;
-    margin-left: 30px;
     padding-left: 27px;
     text-align: left;
     border-bottom-color: rgb(228, 228, 228);
     border-bottom-style: solid;
     border-bottom-width: 1px;
+
 }
 
 .bottom {
@@ -315,4 +326,22 @@ a {
     text-decoration-style: solid;
     visibility: visible;
     white-space: nowrap;
+}
+
+.link:hover{
+    text-decoration-line: underline;
+}
+
+.gmail {
+    font-family: Arial, sans-serif;
+    font-size: 13px;
+    display: inline-block;
+}
+
+.images {
+    font-family: Arial, sans-serif;
+    font-size: 13px;
+    display: inline-block;
+    padding-left: 15px;
+    padding-right: 15px;
 }
